--- a/index.html
+++ b/index.html
@@ -10,11 +10,20 @@
     <h1>jQuery Forms</h1>
     <div>
       <form id="employeeinfo">
-        <label for="employeefirstname">Employee First Name:</label>
-        <input type="text" id="employeefirstname" name="employeefirstname" />
+        <label for="employeeFirstName">Employee First Name:</label>
+        <input type="text" id="employeeFirstName" name="employeeFirstName" />
 
-        <label for="employeelastname">Employee Last Name:</label>
-        <input type="text" id="employeelastname" name="employeelastname" />
+        <label for="employeeLastName">Employee Last Name:</label>
+        <input type="text" id="employeeLastName" name="employeeLastName" />
+
+        <label for="employeeIdNumber">Employee ID Number:</label>
+        <input type="number" id="employeeIdNumber" name="employeeIdNumber" />
+
+        <label for="employeeJobTitle">Employee Job Title:</label>
+        <input type="text" id="employeeJobTitle" name="employeeJobTitle" />
+
+        <label for="employeeSalary">Employee Salary:</label>
+        <input type="number" id="employeeSalary" name="employeeSalary" />
 
         <input type="submit" value="Submit Employee" />
       </form>
