Adding basic and hard mode

--- a/index.html
+++ b/index.html
@@ -28,8 +28,35 @@
         <input type="submit" value="Submit Employee" />
       </form>
     </div>
-    <div id="container">
+    <div>
       <h2>Container</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>
+              First Name
+            </th>
+            <th>
+              Last Name
+            </th>
+            <th>
+              ID Number
+            </th>
+            <th>
+              Job Title
+            </th>
+            <th>
+              Salary
+            </th>
+          </tr>
+        </thead>
+        <tbody id="container">
+
+        </tbody>
+      </table>
+    </div>
+    <div>
+      Total Monthly Salary: <span id="monthlySalary">0</span>
     </div>
   </body>
 </html>
